<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemoElementActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_with_usrule"/>
    <CheckBox
        android:id="@+id/cb_yes"
        android:layout_width="wrap_content"
        android:text="@string/yes"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/cb_no"
        android:layout_width="wrap_content"
        android:text="@string/no"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_clickMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:enabled="false"
        android:onClick="handleClickable"
        />
    <RadioButton
        android:id="@+id/rb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"/>
    <RadioButton
        android:id="@+id/rb_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"/>
    <Button
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:enabled="false"
        android:onClick="handleClickable"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:text="18 -> 22"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="23 -> 27"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="27 -> 35"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="35 -> 40"
            android:layout_height="wrap_content"/>

    </RadioGroup>
</LinearLayout>